Fixed indexation grid tag CSS issue where was not visible on Safari

--- a/core/dd_grid/css/view_indexation.less
+++ b/core/dd_grid/css/view_indexation.less
@@ -190,20 +190,28 @@
 								width: 3.5rem;
 
 								>.tag_id {
-									display: flex;
-									align-items: center;
-									justify-content: center;
-									background-image: radial-gradient(30% 50%ellipse at 109% 50%,#fff 22px,transparent 10px,#fa0 0);
-									border-bottom-left-radius: 8px;
-									border-top-left-radius: 8px;
-									color: #fff;
-									padding: 0 5px;
-									min-width: 20px;
+									// display: flex;
+									// align-items: center;
+									// justify-content: center;
+									// background-image: radial-gradient(30% 50%ellipse at 109% 50%,#fff 22px,transparent 10px,#fa0 0);
+									// border-bottom-left-radius: 8px;
+									// border-top-left-radius: 8px;
+									// color: #fff;
+									// padding: 0 5px;
+									// min-width: 20px;
+									// margin-top: 0.5rem;
+									// height: 0.8rem;
+									// width: 3rem;
+									// padding: 7px;
+
+									.fn_build_tag_indexation(
+										@color_tag_indexation_normal,
+										white
+									);
+									height: 1rem;
 									margin-top: 0.5rem;
-									height: 0.8rem;
-									width: 3rem;
-									padding: 7px;
 								}
+
 							}
 
 							// column button indexation
